--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1230,20 +1230,12 @@
                 },
                 chart: {
                    // renderTo: 'container',
-                    type: 'line',
+                    type: 'spline',
                     animation: false, // don't animate in old IE
                     events: {
                         load: function (event) {
 
                             var series = this.series;
-                         /*   var series1 = this.series[1];
-                            var series2 = this.series[2];
-                            var series3 = this.series[3];
-                            var series4 = this.series[4];
-                            var series5 = this.series[5];
-                            var series6 = this.series[6];
-                            var series7 = this.series[7];
-                        */
                             var cnt = count;
                             setInterval(function ( ) {
                                 var x = (new Date()).getTime();
@@ -1262,25 +1254,7 @@
                                     }
                                 });
 
-                               // series[0].addPoint([x, Math.random()], true, true);
-                               /* series[1].addPoint([x, Math.random()], true, true);
-                                series[2].addPoint([x, Math.random()], true, true);
-                                series[3].addPoint([x, Math.random()], true, true);
-                                series[4].addPoint([x, Math.random()], true, true);
-                                series[5].addPoint([x, Math.random()], true, true);
-                                series[6].addPoint([x, Math.random()], true, true);
-                                series[7].addPoint([x, Math.random()], true, true);
-                                //series[].addPoint([x, Math.random()], true, true);*/
 
-                          /*      series.addPoint([x, y], true, true);
-                                series1.addPoint([x, Math.random()], true, true);
-                                series2.addPoint([x, Math.random()], true, true);
-                                series3.addPoint([x, Math.random()], true, true);
-                                series4.addPoint([x, Math.random()], true, true);
-                                series5.addPoint([x, Math.random()], true, true);
-                                series6.addPoint([x, Math.random()], true, true);
-                                series7.addPoint([x, Math.random()], true, true);
-                                */
                             }, 1000);
                         }
 
@@ -1327,73 +1301,7 @@
                     enabled: false
                 },
                 series : createSeries(count)
-                        /*
-                        [{
-                            name: 'Jiang',
-                            data: (function () {
-                                var data = [], time = (new Date()).getTime(), i;
-                                for (i = -19; i <= 0; i++) {
-                                    data.push(
-                                            {
-                                                x: time + i * 1000,
-                                                y: 2
-                                            }
-                                    )
-                                }
-                                return data;
-                            }())
-                        },
-                            {
-                            name: 'long',
-                            data: (function () {
-                                var data = [], time = (new Date()).getTime(), i;
-                                for (i = -19; i <= 0; i++) {
-                                    data.push(
-                                            {
-                                                x: time + i * 1000,
-                                                y: 2
-                                            }
-                                    )
-                                }
-                                return data;
-                            }())
-                        }
 
-                        ]*/
-                        /*
-                       [{
-                        name: '读',
-                        data: (function () {
-                            // generate an array of random data
-                            var data = [],
-                                    time = (new Date()).getTime(),
-                                    i;
-                            for (i = -19; i <= 0; i += 1) {
-                                data.push({
-                                    x: time + i * 1000,
-                                    y: Math.random()
-                                });
-                            }
-                            return data;
-                        }())
-                    }, {
-                        name: '写',
-                        data: (function () {
-                            // generate an array of random data
-                            var data = [],
-                                    time = (new Date()).getTime(),
-                                    i;
-                            for (i = -19; i <= 0; i += 1) {
-                                data.push({
-                                    x: time + i * 1000,
-                                    y: Math.random()
-                                });
-                            }
-                            return data;
-                        }()),
-                        color : '#6FDB4B'
-                    }]
-                    */
             });
 
 
